--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./static/html/about.html"><strong>ABOUT US</strong></a>
                         </li>
-                        <li class="nav-item">
+<!--                         <li class="nav-item">
                             <a class="nav-link" href="./static/html/team.html"><strong>TEAM</strong></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </nav>
@@ -269,7 +269,7 @@
     <!-- end of About section -->
 
     <!-- ======= Trainers Section ======= -->
-    <section id="trainers" class="trainers">
+<!--     <section id="trainers" class="trainers">
         <div class="container my-5">
             <div class="section-title mb-5 text-center">
                 <hr class="style-two">
@@ -377,7 +377,7 @@
 
         </div>
         </div>
-    </section><!-- End Trainers Section -->
+    </section> -->
 
     <!-- footer section -->
 
